--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Evaluate Ram usage
         uses: actions/checkout@v2
         with:
-          repository: fff
+          repository: Weezeslim/monitor_application_performance
           ref: main
           path: .github/workflows/
           process_id: ${{ steps.application_pid.outputs.application_process_id }}
