--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,9 +68,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: run external workflow
-      id: external 
-      uses: Weezeslim/monitor_application_performance@main
+    - name: Evaluate Ram usage
+      id: external
+      uses: actions/checkout@v2
+      with:
+        repository: Weezeslim/monitor_application_performance
+        ref: main
+        path: .github/workflows/
 
     - name:   Get external workflow output
       run: echo "Sum of 1 and 2 from external workflow:${{steps.external.outputs.sum_result}}"
