--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Python setup
+      uses: actions/setup-python@v2
+      with:
+         python-version: '3.7.15'
+
     - name: Evaluate Ram usage
       id: external
       uses: actions/checkout@v2
