--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,11 +81,9 @@ jobs:
     #     ref: main
     #     path: .github/workflows/
     
-    - name: Evaluate Ram usage
-      id: external
-      uses: Weezeslim/monitor_application_performance/.github/workflows/django.yml@main
+  external:
+    uses: Weezeslim/monitor_application_performance/.github/workflows/django.yml@main
+    needs:  use_external_workflow
         
 
-    - name:   Get external workflow output
-      run: echo "Sum of 1 and 2 from external workflow:${{steps.external.outputs.sum_result}}"
     
