--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@
 #       - name: Wait for server to start
 #         run: sleep 10s
         
+        # - name: Install psutil
+        #   run: pip install psutil
+        
 
 #       - name: obtaining the name of the process
 #         id: application_pid
