--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
         id: monitor_ram
         uses: nahloo-obi/githubaction/jsactions@v1.15
         with:
-          benchmark: 100
+          benchmark: '100'
           
       # Use the output from the `evaluate` step
       - name: Get the output script result
