--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,9 @@ jobs:
         run: |
           pid=$(pgrep -f 'python manage.py runserver')
           echo ":: set-output name=application_process_id::$pid"
+          ps -p 1803 1804 -o pid,cmd
+
+          
 
       # step to access the action for the performance evaluation tool
       - name: Evaluate ram usage
