--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: python manage.py migrate
 
       # - name: Run django application
-      #   run: python manage.py runserver 0.0.0.0:8000 &
+      #   run: python manage.py runserver --noreload 0.0.0.0:8000 &
 
       # - name: Wait for server to start
       #   run: sleep 10s
