--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Migrations for django
         run: python manage.py migrate
 
-      # - name: Run django application
-      #   run: python manage.py runserver --noreload 0.0.0.0:8000 &
+      - name: Run django application
+        run: python manage.py runserver --noreload 0.0.0.0:8000 &
 
-      # - name: Wait for server to start
-      #   run: sleep 10s
+      - name: Wait for server to start
+        run: sleep 10s
         
       - name: Install psutil
         run: pip install psutil
