--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
       # step to access the action for the performance evaluation tool
       - name: Evaluate ram usage
         id: monitor_ram
-        uses: nahloo-obi/githubaction/jsactions@v
+        uses: nahloo-obi/githubaction/jsactions@v1.45
         with:
           benchmark: 100
           
